--- a/app/views/admin/featurable_items/index.html.erb
+++ b/app/views/admin/featurable_items/index.html.erb
@@ -42,9 +42,9 @@
             <h5 class="text-xl font-bold leading-none text-gray-900 dark:text-white">
               <%= item.name %>
             </h5>
-            <%= button_to admin_featured_listing_featurable_item_path(@featured_listing, id: item.id),
+            <%= button_to admin_featured_listing_featurable_items_path(@featured_listing),
                 method: :post,
-                params: { type: item.class.name },
+                params: { type: item.class.name, id: item.id },
                 class: "text-blue-600 hover:text-blue-900 dark:text-blue-400 dark:hover:text-blue-300",
                 data: { turbo_frame: "featured_listing_#{@featured_listing.id}" } do %>
               <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
