--- a/app/views/admin/featured_listings/index.html.erb
+++ b/app/views/admin/featured_listings/index.html.erb
@@ -29,18 +29,24 @@
 
             <div class="space-y-3 mb-6">
               <% if listing.featured_listing_items.any? %>
-                <% listing.featured_listing_items.includes(:featurable).limit(10).each do |item| %>
+                <% listing.featured_listing_items.first(10).each do |item| %>
                   <div class="flex items-center space-x-3 p-2 rounded-md hover:bg-gray-50">
                     <div class="flex-shrink-0">
-                      <% if item.featurable.is_a?(Company) %>
-                        <%= image_tag item.featurable.logo_url, class: "h-8 w-8 rounded-full object-cover", alt: item.featurable.name %>
-                      <% else %>
-                        <div class="h-8 w-8 rounded-full bg-gray-200 flex items-center justify-center">
+                      <div class="h-8 w-8 rounded-full bg-gray-200 flex items-center justify-center">
+                        <% if item.featurable.is_a?(Company) %>
+                          <% if item.featurable.respond_to?(:logo_url) && item.featurable.logo_url.present? %>
+                            <%= image_tag item.featurable.logo_url, class: "h-8 w-8 rounded-full object-cover", alt: item.featurable.name %>
+                          <% else %>
+                            <svg class="h-5 w-5 text-gray-400" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
+                              <path d="M9 6a3 3 0 11-6 0 3 3 0 016 0zM17 6a3 3 0 11-6 0 3 3 0 016 0zM12.93 17c.046-.327.07-.66.07-1a6.97 6.97 0 00-1.5-4.33A5 5 0 0119 16v1h-6.07zM6 11a5 5 0 015 5v1H1v-1a5 5 0 015-5z" />
+                            </svg>
+                          <% end %>
+                        <% else %>
                           <svg class="h-5 w-5 text-gray-400" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
                             <path fill-rule="evenodd" d="M4 4a2 2 0 012-2h8a2 2 0 012 2v12a2 2 0 01-2 2H6a2 2 0 01-2-2V4zm2 0h8v12H6V4z" clip-rule="evenodd" />
                           </svg>
-                        </div>
-                      <% end %>
+                        <% end %>
+                      </div>
                     </div>
                     <div class="flex-1 min-w-0">
                       <p class="text-sm font-medium text-gray-900 truncate"><%= item.featurable.name %></p>
